kubernetes/applications/forgejo/forgejo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: forgejo
  labels:
    app.kubernetes.io/name: forgejo
    app.kubernetes.io/part-of: everlab
