kubernetes/applications/forgejo/forgejo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo
  namespace: forgejo
  labels:
    app.kubernetes.io/name: forgejo
    app.kubernetes.io/part-of: everlab
spec:
  type: ClusterIP

  selector:
    app.kubernetes.io/name: forgejo

  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: forgejo-ssh
  namespace: forgejo
  labels:
    app.kubernetes.io/name: forgejo
    app.kubernetes.io/part-of: everlab
  annotations:
    lbipam.cilium.io/ips: "192.168.12.101"
    external-dns.alpha.kubernetes.io/hostname: git.prod.everlab.dev
spec:
  type: LoadBalancer

  selector:
    app.kubernetes.io/name: forgejo

  ports:
    - name: ssh
      port: 22
      targetPort: ssh
      protocol: TCP
